k8s/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 80 # порт контейнера
  selector:
    app: user-service      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
