k8s/user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/user-service
            pathType: "Prefix"
            backend:
              service:
                name: user-service-service
                port:
                  number: 80
